--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "msb",
   "version": "1.0.0",
-  "description": "MSB-module stroy home",
+  "description": "",
   "main": "index.js",
   "dependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-watch": "^5.0.1",
-    "sass": "^1.54.0"
+    "gulp-watch": "^5.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
